# zappai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  climate_generative_model.ipynb  crop_optimizer.ipynb  crop_yield_model.ipynb  dev-compose.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 05f781c381cf_constraint_on_coordinates_and_month.py  421958731695_add_yield_per_unit_surface.py  4586d4950019_add_model_mse_and_r2_to_crop.py  50c87407fcc5_add_soil_surface.py  5579f5ee1e9f_layer_1_to_3.py  58ccf6374d4d_add_soil_type.py  64cb1184cd43_add_mse.py  687d2a7c16ac_remove_precipitation_type.py  698bfb7c527a_removed_useless_variables.py  6fa88a6cbdee_add_is_visible_to_location.py  8c6bb09dadd3_add_duration_months.py  8e163fdd4146_lon_lat_to_float.py  9213ee217063_change_yield_name.py  961da5db42f3_delete_crop_yield_data_cascade_on_.py  966f70db0d0b_readded_useless_variables.py  98106aaf901a_auth_tokens.py  9b60ae90b92d_add_is_past_climate_data_downloading.py  a52220c4b05b_added_data_year_and_month.py  bc47aee29ffb_removed_ph.py  (+8 more)
frontend/: Dockerfile  index.html  nginx.conf  package.json
scripts/: create_crop_yield_models.py  create_user.py  delete_user.py  download_future_climate_data.py  download_past_climate_data_for_example_location.py  download_past_climate_data_for_locations.py  export_past_climate_data.py  import_crop_yield_data.py  import_past_climate_data.py  logout_user.py
training_data/: past_climate_data.csv
zappai/: __init__.py  config.py  import_models.py  logging_conf.py  main.py  schemas.py
(+68 files in other folders)
