[tool.poetry]
name = "zappai"
version = "0.1.0"
description = ""
authors = ["PeppeOsmio <bosius00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"
aiohttp = "^3.9.5"
matplotlib = "^3.9.0"
cdsapi = "^0.7.0"
scikit-learn = "^1.4.2"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.7.1"
requests = "^2.31.0"
pydantic-settings = "^2.2.1"
geoalchemy2 = "^0.15.1"
tensorflow = "^2.16.1"
fastapi = "^0.111.0"
cftime = "^1.6.3"
bcrypt = "^4.1.3"
xarray = "^2024.5.0"
eccodes = "^1.7.1"
netcdf4 = "^1.7.1.post2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force-exclude = '''
/(
\.git
| \.mypy_cache
| \.venv
| \.postgres_data
)/
'''
